--- a/project/src/App.css
+++ b/project/src/App.css
@@ -28,11 +28,38 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+.Hero_image{
+/*   width: 100%;
+  height: 91vh; */
+  /*height: 100vh - 200px;*/
+  background-color: #0a3541;
+  /*background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("photographer.jpg");*/
+
+
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
 }
+
+.hero_text{
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+}
+
+.header{
+  height: 9vh;
+}
+
+.leaderBoards_section .title{
+
+}
+/*scss files
+variables.scss
+varvid, headerheight
+*/
