--- a/project/src/Styles/App.scss
+++ b/project/src/Styles/App.scss
@@ -1,16 +1,7 @@
+@import './Variables.scss';
+
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
 
 .App-header {
@@ -30,10 +21,10 @@
 
 
 .Hero_image{
-/*   width: 100%;
-  height: 91vh; */
+  width: 100%;
+  height: 91vh;
   /*height: 100vh - 200px;*/
-  background-color: #0a3541;
+  background-color: $darkBlue;
   /*background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("photographer.jpg");*/
 
 
