--- a/project/src/Styles/GamesSlider.scss
+++ b/project/src/Styles/GamesSlider.scss
@@ -1,9 +1,12 @@
+@import 'Variables.scss';
+$padding: 20px;
+
 .slider {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: gray;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: gray;
     
   .slide {
     opacity: 0;
@@ -16,9 +19,56 @@
     transition-duration: 1s;
     transform: scale(1.08);
     width: 50%;
-
+    height: 50%;
   }
+  .slideContent{
+    display: flex;
+    //gap: 20px;
+    border: 1px solid black;
+    height: 100%;
+    .leftContent, .rightContent {
+      width: 50%;
+    }
+    .gameImg{
+      width: 100%;
+      height: 100%;
+      background-color: blue;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      position: relative;
+    }
+    .gameName{
+      text-align: center;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      color: white;
+    }
+    .descWrap, .playBtnWrap{
+      height: 50%;
+    }
+    .desc{
+      text-align: justify;
+      padding: $padding;
+    }
+    .playBtnWrap{
+      position: relative;
+    }
+    .playBtn{
+      position: absolute;
+      //bottom: 2* $padding;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      div{
+        background-color: $green;
+        padding: 15px;
+      }
+    }
   }
+}
   
   
   .right-arrow {
@@ -54,6 +104,15 @@
   }
   #home{
     .slider {
-      height: 25vh;
+      height: 75vh;
+    }
+  }
+
+  @media only screen and (max-width: 900px) {
+    .slider{
+      .leftContent, .rightContent{
+        width: 100%;
+        background-color: red;
+      }
     }
   }
