--- a/project/src/Styles/DailyChallengeSection.scss
+++ b/project/src/Styles/DailyChallengeSection.scss
@@ -14,6 +14,7 @@
       padding-bottom: 50px;
       color: white;
       display: flex;
+      width: 100%;
       .leftDiv{
         width: 50%;
         cursor: pointer;
@@ -37,6 +38,8 @@
         width: 50%;
       }
     }
-
+    @media only screen and (max-width: 700px) {
+      
+    }
 
 }
