--- a/project/src/Styles/GamesSlider.scss
+++ b/project/src/Styles/GamesSlider.scss
@@ -29,22 +29,39 @@ $padding: 20px;
     .leftContent, .rightContent {
       width: 50%;
     }
+    .bgGradient{
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
+    }
+
+    .imgBox{
+      width: 100%;
+      height: 100%;
+      position: relative;
+
+    }
     .gameImg{
       width: 100%;
       height: 100%;
       background-color: blue;
       background-position: center;
       background-repeat: no-repeat;
-      background-size: cover;
-      position: relative;
+      background-size: contain;
     }
     .gameName{
+      font-size: $h4;
       text-align: center;
       position: absolute;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
       color: white;
+      -webkit-text-stroke: 1px black;
+
+
     }
     .descWrap, .playBtnWrap{
       height: 50%;
@@ -62,6 +79,7 @@ $padding: 20px;
       bottom: 0;
       left: 0;
       width: 100%;
+      text-align: center;
       div{
         background-color: $green;
         padding: 15px;
@@ -70,11 +88,9 @@ $padding: 20px;
   }
 }
   
-  
-  .right-arrow {
+  .arrow{
     position: absolute;
     top: 50%;
-    right: 32px;
     font-size: 3rem;
     color: #000;
     z-index: 10;
@@ -82,15 +98,12 @@ $padding: 20px;
     user-select: none;
   }
   
+  .right-arrow {
+    right: 64px;
+  }
+  
   .left-arrow {
-    position: absolute;
-    top: 50%;
-    left: 32px;
-    font-size: 3rem;
-    color: #000;
-    z-index: 10;
-    cursor: pointer;
-    user-select: none;
+    left: 64px;
   }
   
   
@@ -127,7 +140,7 @@ $padding: 20px;
     }
   }
 
-  @media only screen and (max-width: 600px) {
+  @media only screen and (max-width:999px) {
     .slider{
 
       .slideContent{
