--- a/project/src/components/nonogram/style.css
+++ b/project/src/components/nonogram/style.css
@@ -1,22 +1,48 @@
-.square {
-    width: 2.5rem;
-    height: 2.5rem;
-    color: green;
+.SolvedRow {
+    background-color: rgba(0, 0, 0, 1);
+}
+
+:root {
+    --width: 1.25vw;
+    --height: 1.25vw;
+}
+
+td.Square {
+    width: var(--width);
+    height: var(--height);
     border: 1px solid black;
 }
 
-.column {
-    grid-row: 9;
+table.Board {
+    width: min-content;
+    /* height: 50vw; */
 }
 
-.grid {
-    display: grid;
+th.HintCell {
+    height: var(--height);
+    border: 1px solid black;
+    border-top: none;
+    vertical-align: bottom;
+    text-align: center;
+    white-space: wrap;
 }
 
-.white {
+td.HintCell {
+    width: var(--width);
+    border: 1px solid black;
+    border-left: none;
+    text-align: end;
+    white-space: nowrap;
+}
+
+th.EmptyCell {
+    border: none;
+}
+
+.White {
     background-color: #ddd;
 }
 
-.black {
+.Black {
     background-color: #222;
 }
