--- a/project/src/Styles/Header.scss
+++ b/project/src/Styles/Header.scss
@@ -1,10 +1,10 @@
 @import 'Variables.scss';
 
 .header{
+    justify-content: space-between;
     text-transform: uppercase;
     background-color: $green !important;
-
-    
+    height: $headerHeight;
     .logo{
        /*  position: absolute;
         display: flex;
@@ -14,6 +14,12 @@
         top: 3vh; */
         margin-right: 22px;
 
+    }
+
+    .headerItems{
+        width: 100%;
+        display: flex;
+        align-items: center;
     }
 
     .headerItem{
@@ -47,6 +53,7 @@
     }
     
     
+    
     .dropdown:hover .dropdownContent {
         display: block;
     }
@@ -55,5 +62,72 @@
             color: $linkHover;
         }
     }
+    .nav-btn{
+        display: none;
+        flex-direction: column;
+        gap: 4px;
+        .bar{
+            width: 20px;
+            height: 3px;
+            background-color: white;
+        }
+
+    }
+    .nav-close-btn{
+        position: absolute;
+		top: 15px;
+		right: 10px;
+    }
     
-}
+    
+    .mobileNav{
+        display: none;
+    }
+}    
+    @media only screen and (max-width:999px) {
+        .header{
+            height: unset;
+            .nav-btn{
+                display: flex;
+                &.active{
+                    .bar{
+                        transition: 0.3s;
+                        &.bar1{
+                            transform: translateY(4px) rotateZ(45deg);
+                        }
+                        &.bar2{
+                            display: none;
+                        }
+                        &.bar3{
+                            transform: translateY(-4px) rotateZ(-45deg);
+                        }
+                    }
+                }
+                
+            }
+            .headerItem{
+                display: none;
+            }
+        }
+        .responsive_nav{
+            display: flex;
+            top: 0;
+            left: 0;
+            height: 100vh;
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            gap: 1.5rem;
+            transition: 1s;
+            &.mobileNav{
+                display: block;
+            }
+        }
+        
+        
+        
+        
+    }
+
