--- a/project/src/Styles/Header.scss
+++ b/project/src/Styles/Header.scss
@@ -1,36 +1,32 @@
 @import 'Variables.scss';
 
 .header{
-    justify-content: space-between;
-    text-transform: uppercase;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    flex-direction: row !important;    
     background-color: $green !important;
     height: $headerHeight;
+    width: 100%;
     .logo{
-       /*  position: absolute;
-        display: flex;
-        justify-self: center;
-        //alignSelf: "center";
+        position: absolute;
         left: 20px;
-        top: 3vh; */
-        margin-right: 22px;
-
     }
-
     .headerItems{
-        width: 100%;
-        display: flex;
-        align-items: center;
+        text-transform: uppercase;
     }
 
     .headerItem{
         margin-right: 22px;
         margin-left: 22px;
         transition: 0.3s;
+        color: white;
         :hover{
             color: $linkHover;
         }
     }
 
+    //  DROPDOWNS 
     .dropdown{
         position: relative;
         display: inline-block;
@@ -39,20 +35,20 @@
         text-transform: capitalize;
         display: none;
         position: absolute;
-        min-width: 120px;
         z-index: 1;
         margin-top: unset;
         background-color: $green;
-        background-color: white;
         .menuItem{
-            color: black;
+            color: white;
             padding: 12px;
             text-decoration: none;
             display: block;
+            background-color: $black;
+            &:hover{
+                background-color: $green;
+            }
         }
     }
-    
-    
     
     .dropdown:hover .dropdownContent {
         display: block;
@@ -62,6 +58,10 @@
             color: $linkHover;
         }
     }
+    // -------
+
+
+    //MOBILE
     .nav-btn{
         display: none;
         flex-direction: column;
@@ -78,30 +78,28 @@
 		top: 15px;
 		right: 10px;
     }
-    
-    
     .mobileNav{
         display: none;
     }
 }    
-    @media only screen and (max-width:999px) {
+    @media only screen and (max-width:699px) {
         .header{
-            height: unset;
             .nav-btn{
                 display: flex;
-                &.active{
-                    .bar{
-                        transition: 0.3s;
-                        &.bar1{
-                            transform: translateY(4px) rotateZ(45deg);
-                        }
-                        &.bar2{
-                            display: none;
-                        }
-                        &.bar3{
-                            transform: translateY(-4px) rotateZ(-45deg);
-                        }
+    
+                &.active{ 
+                    .bar1{
+                        transform: translateY(4px) rotateZ(45deg);
                     }
+                    .bar2{
+                        display: none;
+                    }
+                    .bar3{
+                        transform: translateY(-4px) rotateZ(-45deg);
+                    }
+                }
+                .bar{
+                    transition: 0.3s;
                 }
                 
             }
@@ -110,19 +108,50 @@
             }
         }
         .responsive_nav{
-            display: flex;
+            position: fixed;
+            background-color: $green;
             top: 0;
             left: 0;
-            height: 100vh;
+            height: 100%;
             width: 100%;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            gap: 1.5rem;
-            transition: 1s;
             &.mobileNav{
-                display: block;
+                display: flex;
+                .mobileNavWrap{
+                    padding: 3rem 0 ;
+                    width: 100%;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    justify-content: space-evenly;
+                    text-align: center;
+                }
+                a{
+                    color: $black;
+                    text-decoration: none;
+                    transition: 0.3s;
+                    font-size: 2rem;
+                    &:hover{
+                        color: white;
+                    }
+                }
+                .gameTitle{
+                    text-decoration: underline;
+                }
+                .mobileGames, .mobileUser{
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                }
+                .mobileUser{
+                    justify-content: flex-end;
+                }
+                .game{
+                    margin-bottom: 0.5rem;
+                }
+                .mobileLogin{
+                    margin-bottom: 0.5rem;
+                }
+
             }
         }
         
