--- a/project/src/Styles/Variables.scss
+++ b/project/src/Styles/Variables.scss
@@ -1,7 +1,7 @@
 $green : rgb(19, 134, 19);
-$black : #0a3541;
+$black : #010607;
 $darkBlue : #0a3541;
 $h3: 2.6rem;
 $h4: 2.4rem;
 $linkHover: rgb(5, 44, 216);
-$headerHeight: 7vh;
+$headerHeight: 60px ;
