--- a/project/src/Styles/DailyChallengeSection.scss
+++ b/project/src/Styles/DailyChallengeSection.scss
@@ -1,29 +1,26 @@
 @import './Variables.scss';
 
 .dailyChallengeSection{
-    .title{
-        font-size: $h3;
-        
-        
-    }
-    .text{
-        
-    }
+  width: 100%;
+  
     .dailyChallengeWrapper{
-      padding-top: 50px;
-      padding-bottom: 50px;
       color: white;
-      display: flex;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
       width: 100%;
+      gap: 5rem;
       .leftDiv{
-        width: 50%;
         cursor: pointer;
         
         .dailyChallenge{
+            background-color: white;
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
             position: relative;
+            //width: 100%;
+            height: 100%;
+            margin-right: 20px;
         }
         .dailyText{
             color: black;
@@ -35,11 +32,39 @@
         }
       }
       .rightDiv{
-        width: 50%;
+        .info{
+          text-align: center;
+        }
+        .title{
+          font-size: $h3_scaling;
+          white-space: nowrap;
+        }
+        .text{
+          margin-top: 20px;
+
+        }
       }
     }
     @media only screen and (max-width: 700px) {
-      
+      .dailyChallengeWrapper{
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr;
+        gap: 2rem;
+
+        .leftDiv{
+         
+        }
+        .rightDiv{
+          
+          .title{
+            font-size: $mobileTitle;
+          }
+          .text{
+            margin-left: 10px;
+            margin-right: 10px;
+          }
+        }
+      }
     }
 
 }
