--- a/project/src/Styles/Variables.scss
+++ b/project/src/Styles/Variables.scss
@@ -3,5 +3,7 @@ $black : #010607;
 $darkBlue : #0a3541;
 $h3: 2.6rem;
 $h4: 2.4rem;
+$h3_scaling: 3vw;
 $linkHover: rgb(5, 44, 216);
 $headerHeight: 60px ;
+$mobileTitle: 1.3rem;
