game_window with 1/1 aspect ratio

--- a/project/src/components/nonogram/style.css
+++ b/project/src/components/nonogram/style.css
@@ -14,7 +14,7 @@ td.Cell {
 }
 
 table.Board {
-    width: min-content;
+    /*width: min-content;*/
     user-select: none;
     /* height: 50vw; */
 }
