--- a/project/src/Styles/Game.scss
+++ b/project/src/Styles/Game.scss
@@ -1,24 +1,36 @@
 @import 'Variables.scss';
 
-.game{
-    background-color: aqua;
-    height: 100%;
+#game{
     width: 100%;
+    height: 100%;
+    background-color: $darkBlue;
 
-    /* .gameWindowWrap{
-        width: 100vw;
-        height: 100vh;
-        background-color: $darkBlue;
+    .gameWindowWrap{
         display: flex;
         justify-content: center;
-        align-items: center;        
-    }
+        align-items: center;
+        height: 100vh;
+       
+    }   
+
     .gameWindow{
+        background-color: aqua;
+        //max-width: calc(100vh - $headerHeight);
+        max-width: 90vh;
+        position: relative;
         width: 100%;
-        height: 0;
-        padding-top: 100%;
         box-sizing: border-box;
-        border: 2px solid $black;
-        background-color: rgb(72, 198, 18);
-    } */
+        border: 3px solid $black;
+        box-shadow: -10px 5px 5px rgba($color: $black, $alpha: 0.5);
+        &::after{
+            content: '';
+            display: block;
+            padding-top: 100%;
+        }
+        .playableGame{
+            position: absolute;
+            width: 100%;
+            height: 100%;
+        }
+    }
 }
