--- a/project/src/Styles/Game.scss
+++ b/project/src/Styles/Game.scss
@@ -33,4 +33,66 @@
             height: 100%;
         }
     }
+    .bottomWrap{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        
+    }
+    .leftDiv, .rightDiv{
+        padding-top: 40px;
+        padding-bottom: 40px;
+    }
+    .leftDiv{
+        color: white;
+        background-color: black;
+        padding-left: 20px;
+        padding-right: 20px;
+        .title, .tutorial{
+            text-align: center;
+        }
+        .text{
+            text-align: justify;
+        }
+        .tutorial{
+            padding-top: 20px;
+            padding-bottom: 20px;
+            font-size: 1.3rem;
+        }
+        .video{
+            background-color: blue;
+            width: 100px;
+            height: 100px;
+        }
+    }
+    .rightContent, .leftContent, .rightDiv{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+    .title{
+        font-size: $h4_scaling;
+    }
+    .rightDiv{
+        background-color: rgb(160, 128, 128);
+        
+        
+       
+        .subtitle{
+            font-size: 1.2rem ;
+        }   
+    }
+    @media only screen and (max-width: 700px) {
+        .bottomWrap{
+            grid-template-rows: 1fr 1fr;
+            grid-template-columns: 1fr;
+            .title{
+                font-size: 1.2rem;
+            }
+            .subtitle{
+                font-size: 1rem ;
+            }   
+        }
+    }
 }
+
