--- a/project/src/Styles/Header.scss
+++ b/project/src/Styles/Header.scss
@@ -5,7 +5,7 @@
     justify-content: flex-end;
     align-items: center;
     flex-direction: row !important;    
-    background-color: $green !important;
+    background-color: $darkBlue !important;
     height: $headerHeight;
     width: 100%;
     .logo{
@@ -38,7 +38,7 @@
         z-index: 1;
         top: $headerHeight;
         margin-top: unset;
-        background-color: $green;
+        background-color: $darkBlue;
         .menuItem{
             color: white;
             padding: 12px;
@@ -46,7 +46,7 @@
             display: block;
             background-color: $black;
             &:hover{
-                background-color: $green;
+                background-color: $darkBlue;
             }
         }
     }
@@ -110,7 +110,7 @@
         }
         .responsive_nav{
             position: fixed;
-            background-color: $green;
+            background-color: $darkBlue;
             top: 0;
             left: 0;
             height: 100%;
@@ -127,12 +127,12 @@
                     text-align: center;
                 }
                 a{
-                    color: $black;
+                    color: white;
                     text-decoration: none;
                     transition: 0.3s;
                     font-size: 2rem;
                     &:hover{
-                        color: white;
+                        color: $black;
                     }
                 }
                 .gameTitle{
