--- a/project/src/Styles/Variables.scss
+++ b/project/src/Styles/Variables.scss
@@ -1,11 +1,12 @@
 $green : rgb(19, 134, 19);
 $black : #121212;
 $darkBlue : #0a3541;
+$white: rgb(209, 206, 206);
+$linkHover: rgb(5, 44, 216);
 $h3: 2.6rem;
 $h4: 2.4rem;
 $h6: 1.4rem;
 $h3_scaling: 3vw;
 $h4_scaling: 2.7vw;
-$linkHover: rgb(5, 44, 216);
 $headerHeight: 60px ;
 $mobileTitle: 1.3rem;
