--- a/project/src/Styles/loginRegister.scss
+++ b/project/src/Styles/loginRegister.scss
@@ -13,7 +13,8 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        flex-direction: column; 
+        flex-direction: column;
+        background-color: $white; 
     }
     .title{
         margin: 20px 0;
@@ -57,7 +58,7 @@
             background-color: $black;
         }
         .textfield{
-            background-color: white;
+            background-color: $white;
         }
         p, h3{
             color: white;
