--- a/project/src/Styles/loginRegister.scss
+++ b/project/src/Styles/loginRegister.scss
@@ -14,7 +14,10 @@
         justify-content: center;
         align-items: center;
         flex-direction: column;
-        background-color: $white; 
+        background-color: $white;
+        box-sizing: border-box;
+        border: 2px solid $darkBlue;
+        box-shadow: 5px 5px 5px rgba($color: $white, $alpha: 0.2);
     }
     .title{
         margin: 20px 0;
@@ -40,11 +43,9 @@
     .changeAuth{
         margin-top: 20px;
         text-align: center;
-        position: absolute;
-        bottom: 40px;
-        margin-bottom: 10px;
         .authBtn{
             width: 100%;
+            margin-top: 10px;
         }
 
     }
