--- a/project/src/Styles/loginRegister.scss
+++ b/project/src/Styles/loginRegister.scss
@@ -40,6 +40,9 @@
         transform: scaleX(0.9);
         
     }
+    .loading{
+        margin-top: 20px;
+    }
     .changeAuth{
         margin-top: 20px;
         text-align: center;
