--- a/project/src/Styles/Variables.scss
+++ b/project/src/Styles/Variables.scss
@@ -1,5 +1,6 @@
 $green : rgb(19, 134, 19);
 $black : #121212;
+$grey : #474747;
 $darkBlue : #0a3541;
 $white: rgb(209, 206, 206);
 $linkHover: rgb(5, 44, 216);
