--- a/project/src/Styles/Profile.scss
+++ b/project/src/Styles/Profile.scss
@@ -60,6 +60,8 @@
     flex-direction: column;
     padding: 80px 0;
     text-align: center;
+    height: 50%;
+    overflow-y:auto;
 }
 
 .modalLink{
