--- a/project/src/Styles/Game.scss
+++ b/project/src/Styles/Game.scss
@@ -8,9 +8,7 @@
     .gameWindowWrap{
         display: flex;
         justify-content: center;
-        align-items: center;
-        height: 100vh;
-       
+        align-items: flex-start;
     }   
 
     .gameWindow{
@@ -21,6 +19,7 @@
         width: 100%;
         box-sizing: border-box;
         border: 3px solid $black;
+        height: 100vh;
         box-shadow: -10px 5px 5px rgba($color: $black, $alpha: 0.5);
         &::after{
             content: '';
@@ -58,6 +57,9 @@
             padding-bottom: 20px;
             font-size: 1.3rem;
         }
+        .title{
+            font-size: $h4_scaling;
+        }
     }
     .rightContent, .leftContent, .rightDiv{
         display: flex;
@@ -65,13 +67,12 @@
         align-items: center;
         flex-direction: column;
     }
-    .title{
-        font-size: $h4_scaling;
-    }
     .rightDiv{
         background-color: rgb(160, 128, 128);
         
-        
+        .title{
+            font-size: $h4_scaling;
+        }
        
         .subtitle{
             font-size: 1.2rem ;
@@ -87,6 +88,9 @@
             .subtitle{
                 font-size: 1rem ;
             }   
+        }
+        .gameWindow{
+            height: 93vh;
         }
     }
 }
