--- a/project/src/Styles/Minesweeper.scss
+++ b/project/src/Styles/Minesweeper.scss
@@ -10,11 +10,20 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        width: 45px;
-        height: 45px;
+        width: 50px;
+        height: 50px;
         text-align: center;
         border: 2px solid black;
         font-weight: 800;
         cursor: pointer;
+    }
+}
+@media only screen and (max-width: 700px) {
+    .Minesweeper{
+        padding: 0 20px;
+        .cell{
+            height: 35px;
+            width: 35px;
+        }
     }
 }
