--- a/project/src/Styles/Variables.scss
+++ b/project/src/Styles/Variables.scss
@@ -2,6 +2,7 @@ $green : rgb(19, 134, 19);
 $black : #121212;
 $grey : #474747;
 $darkBlue : #0a3541;
+$lightBlue : #1b768f;
 $white: rgb(209, 206, 206);
 $linkHover: rgb(5, 44, 216);
 $h3: 2.6rem;
