--- a/project/src/Styles/LeaderBoard.scss
+++ b/project/src/Styles/LeaderBoard.scss
@@ -52,6 +52,14 @@
         margin-left: 5px;
         margin-right: 5px;
     }
+    .accordionTitle{
+        margin: 0;
+    }
+    .dropdown{
+        position: absolute;
+        z-index: 9;
+        background-color: white;
+    }
 
     .board{
         display: flex;
@@ -65,6 +73,18 @@
         }
         .dataRow{
             background-color: $lightBlue;
+        }
+    }
+    @media only screen and (max-width: 500px) {
+        
+        .filtering{
+            flex-direction: column;
+        }
+
+        .board{
+            td{
+                padding: 8px;
+            }
         }
     }
 }
