some styling close#93

--- a/project/src/Styles/LeaderBoardsSection.scss
+++ b/project/src/Styles/LeaderBoardsSection.scss
@@ -1,18 +1,20 @@
 @import 'Variables.scss';
 
 .leaderBoardsSection{
-    
+    padding-top: 50px;
+    padding-bottom: 60px;
+    background-color: gray;
 .LeaderBoards{
     display: grid;
     grid-template-columns: 1fr 1fr;
     width: 100%;
     gap: 2rem;
+    align-items: center;
+    padding-top: 35px;
   
     .LeaderBoardsTextWrapper{
       .LeaderBoardsText{
         text-align: left;
-        padding-top: 20px;
-        padding-bottom: 20px;
       }
       .text{
         padding-top: 20px ;
@@ -21,10 +23,13 @@
         font-size: $h3_scaling;
       }
     }
+    .LeaderBoardsImageWrapper{
+      align-items: center;
+    }
     .LeaderBoardsImage{
+      width: 100%;
         .image{
-            height: 100%;
-            width: 100% ;
+            width: 100%;
         }
 
       background-color: $black;
