--- a/project/src/Styles/DailyChallengeSection.scss
+++ b/project/src/Styles/DailyChallengeSection.scss
@@ -2,6 +2,9 @@
 
 .dailyChallengeSection{
   width: 100%;
+  background-color: $black;
+  padding-top: 60px;
+  padding-bottom: 60px;
   
     .dailyChallengeWrapper{
       color: white;
@@ -18,12 +21,17 @@
             background-repeat: no-repeat;
             background-size: cover;
             position: relative;
+            color: black;
             //width: 100%;
             height: 100%;
             margin-right: 20px;
+            transition: 0.3s;
+            &:hover{
+              background-color: $darkBlue;
+              color: white;
+            }
         }
         .dailyText{
-            color: black;
             text-align: center;
             position: absolute;
             top: 50%;
