--- a/project/src/Styles/GamesSlider.scss
+++ b/project/src/Styles/GamesSlider.scss
@@ -11,13 +11,16 @@ $padding: 20px;
     align-items: center;
     justify-content: space-around;
     flex-direction: row;
+    margin: 0 45px;
     .thumbImg{
-      width: 100px;
-      height: 100px;
+      width: 10vw;
+      height: 10vw;
+      filter: drop-shadow(0 0 0.15rem rgb(0, 0, 0));
       cursor: pointer;
       transition: 0.3s;
       :hover{
         transform: scale(110%);
+        filter: drop-shadow(0 0 0.45rem rgb(0, 0, 0));
       }
     }
   }
@@ -28,6 +31,7 @@ $padding: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 70vh;
     
   .slide {
     opacity: 0;
@@ -55,6 +59,7 @@ $padding: 20px;
   .slideContent{
     display: flex;
     //gap: 20px;
+    box-sizing: border-box;
     border: 1px solid black;
     height: 100%;
     .leftContent, .rightContent {
@@ -77,7 +82,6 @@ $padding: 20px;
     .gameImg{
       width: 100%;
       height: 100%;
-      background-color: blue;
       background-position: center;
       background-repeat: no-repeat;
       background-size: contain;
@@ -90,7 +94,7 @@ $padding: 20px;
       left: 50%;
       transform: translate(-50%, -50%);
       color: white;
-      -webkit-text-stroke: 1px black;
+      //-webkit-text-stroke: 1px black;
 
 
     }
@@ -111,9 +115,17 @@ $padding: 20px;
       left: 0;
       width: 100%;
       text-align: center;
+      text-decoration: none;
       div{
-        background-color: $green;
         padding: 15px;
+        color: white;
+        transition: 0.15s;
+        background-color: $darkBlue;
+        &:hover{
+          font-size: 1.1rem;
+          background-color: $lightBlue;
+          color: black;
+        }      
       }
     }
   }
@@ -130,50 +142,38 @@ $padding: 20px;
   }
   
   .right-arrow {
-    right: 64px;
+    right: 2%;
   }
   
   .left-arrow {
-    left: 64px;
+    left: 2%;
   }
   
-  
 
-  // Differences between pages
-
-  #games{
-    .slider {
-      height: 100vh;
-    }
-  }
-  #home{
-    .slider {
-      height: 75vh;
-    }
-  }
 
   @media only screen and (max-width: 999px) {
     .gamesSlider{
       .thumbnailSection{
-        flex-direction: column;
         .thumbImg{
           margin-top: 20px;
         }
       }
 
     }
-    
-    
     .slider{
 
       .slideContent{
-        display: grid;
+        display: block;
         .leftContent, .rightContent{
           width: unset;
         }
-        .descWrap{
-          height: unset;
+        .rightContent .descWrap{
+          display: none;
         }
+        .leftContent{
+          height: 100%;
+        }
+
         .playBtnWrap{
           position: unset;
           height: unset;
@@ -181,24 +181,19 @@ $padding: 20px;
       }
     }
   }
-
-  @media only screen and (max-width:999px) {
-    .slider{
-
-      .slideContent{
-        display: block;
-        .rightContent{
-          .descWrap{
-            display: none;
-          }
+  @media only screen and (max-width: 580px) {
+    .gamesSlider{
+      .thumbnailSection{
+        flex-wrap: wrap;
+        .thumbImg{
+          //width: 60px;
+          //height: 60px;
         }
-        .leftContent{
-          height: 100%;
-        }
-        .playBtnWrap{
-          
+        li{
+          margin: 10px;
         }
       }
     }
   }
-  
+
+
