--- a/project/src/Styles/Minesweeper.scss
+++ b/project/src/Styles/Minesweeper.scss
@@ -10,20 +10,29 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        width: 50px;
-        height: 50px;
+        width: 3.5vw;
+        height: 3.5vw;
         text-align: center;
         border: 2px solid black;
         font-weight: 800;
         cursor: pointer;
     }
 }
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 1000px) {
     .Minesweeper{
         padding: 0 20px;
         .cell{
             height: 35px;
             width: 35px;
+        }
+    }
+}
+@media only screen and (max-width: 450px) {
+    .Minesweeper{
+        padding: 0 10px;
+        .cell{
+            height: 25px;
+            width: 25px;
         }
     }
 }
