--- a/project/src/Styles/loginRegister.scss
+++ b/project/src/Styles/loginRegister.scss
@@ -3,7 +3,7 @@
 .authContainer{
     padding: 40px 0;
     width: 100%;
-    height: 100%;
+    height: 84vh;
     background-color: $black;
     position: relative;
     .paper{
