remove unused files and pagination fix

--- a/project/src/Styles/Game.scss
+++ b/project/src/Styles/Game.scss
@@ -81,7 +81,7 @@
         flex-direction: column;
     }
     .rightDiv{
-        background-color: rgb(160, 128, 128);
+        background-color: $lightBlue;
         
         .title{
             font-size: $h4_scaling;
