--- a/project/src/Styles/LeaderBoard.scss
+++ b/project/src/Styles/LeaderBoard.scss
@@ -40,6 +40,7 @@
             background-color: $darkBlue;
         }
     } */
+    min-height: 76vh;
     .filtering{
         margin-top: 70px;
         display: flex;
