--- a/project/src/Styles/GamesSlider.scss
+++ b/project/src/Styles/GamesSlider.scss
@@ -82,9 +82,8 @@ $padding: 20px;
     .gameImg{
       width: 100%;
       height: 100%;
-      background-position: center;
-      background-repeat: no-repeat;
-      background-size: contain;
+      object-fit: cover;
+      overflow: hidden;
     }
     .gameName{
       font-size: $h4;
